@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="aopalliance.jar"/>
+	<classpathentry exported="true" kind="lib" path="guice-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="net.jxta.ext.configuration.jar"/>
 	<classpathentry exported="true" kind="lib" path="net.jxta.ext.network.jar"/>
 	<classpathentry exported="true" kind="lib" path="net.jxta.jar"/>
