@@ -5,9 +5,30 @@ Bundle-SymbolicName: net.jxta
 Bundle-Version: 2.5
 Bundle-ClassPath: net.jxta.jar,
  net.jxta.ext.configuration.jar,
- net.jxta.ext.network.jar
+ net.jxta.ext.network.jar,
+ aopalliance.jar,
+ guice-1.0.jar
 Bundle-Localization: plugin
-Export-Package: net.jxta.access,
+Export-Package: com.google.inject,
+ com.google.inject.asm,
+ com.google.inject.asm.signature,
+ com.google.inject.binder,
+ com.google.inject.cglib.asm,
+ com.google.inject.cglib.asm.signature,
+ com.google.inject.cglib.beans,
+ com.google.inject.cglib.core,
+ com.google.inject.cglib.proxy,
+ com.google.inject.cglib.reflect,
+ com.google.inject.cglib.transform,
+ com.google.inject.cglib.transform.impl,
+ com.google.inject.cglib.util,
+ com.google.inject.jndi,
+ com.google.inject.matcher,
+ com.google.inject.name,
+ com.google.inject.spi,
+ com.google.inject.tools.jmx,
+ com.google.inject.util,
+ net.jxta.access,
  net.jxta.codat,
  net.jxta.credential,
  net.jxta.discovery,
@@ -86,5 +107,7 @@ Export-Package: net.jxta.access,
  net.jxta.socket,
  net.jxta.util,
  net.jxta.util.documentSerializable,
+ org.aopalliance.aop,
+ org.aopalliance.intercept,
  sun.net.www.protocol.urn
 Bundle-Vendor: Sun Microsystems Inc.
