@@ -1,4 +1,6 @@
 bin.includes = META-INF/,\
                net.jxta.jar,\
                net.jxta.ext.configuration.jar,\
-               net.jxta.ext.network.jar
+               net.jxta.ext.network.jar,\
+               aopalliance.jar,\
+               guice-1.0.jar
